trying to fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /* ---------- GLOBAL ---------- */
 html, body {
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
